<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/alert_history" />
    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help" />

            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
        </menu>
    </item>
    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>